Fix the input number CSS style, adding an invisible scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+/* @config "../tailwind.config.js"; */
 
 body {
   @apply min-h-screen bg-gradient-to-b from-slate-600  to-purple-700;
@@ -6,4 +7,13 @@ body {
 
 .button_style {
   @apply w-full h-12 text-2xl shadow-sm shadow-slate-400 hover:shadow-md hover:shadow-slate-300 rounded-md text-slate-300 cursor-pointer active:opacity-75 transition-colors;
+}
+
+.scrollbar_hide {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+.scrollbar_hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
